--- a/src/app/admin/adminpage/adminpage.component.html
+++ b/src/app/admin/adminpage/adminpage.component.html
@@ -1,5 +1,24 @@
 
-<a routerLink="/ViewQuestions"routerLinkActive="active">View Questions</a>
+<!-- <button><a routerLink="/ViewQuestions"routerLinkActive="active">View Questions</a></button>
 <br>
 <br>
-<a routerLink="/AdminPage"routerLinkActive="active">View Reports</a>
+<button><a routerLink="/AdminPage"routerLinkActive="active">View Reports</a></button> -->
+
+<body>
+    <div class="id">
+        <br><br><br><br>
+        <label>Welcome Admin!</label>
+        <br><br><br>
+
+        <!-- <img class="img-responsive login-img" src='assets/home.jpg' style="margin-top: 10%;width: 1000%;"> -->
+    
+    <button type="button" class="btn btn-dark btn-lg" style="font-size: 1em;"><a routerLink="/display"routerLinkActive="active">View Questions</a></button>
+    </div>
+    <br><br><br>
+    <div>
+        <button type="button" class="btn btn-dark btn-lg" style="font-size: 1em;">&nbsp;&nbsp;View Reports &nbsp;</button>
+    </div>
+    <br><br>
+    <br><br> <br><br><br><br><br>
+
+</body>
