--- a/src/app/admin/addquestion/addquestion.component.html
+++ b/src/app/admin/addquestion/addquestion.component.html
@@ -7,8 +7,8 @@
        
 
         <div class='form-group' [class.has.error]="idcontrol.touched && idcontrol.invalid">
-            <label  class="col-sm-3 control-label" for ='year' style="color: grey" >Question_id</label>
-            <div class="col-sm-9">   
+            <label  class="col-sm-2 control-label" for ='year' style="color: grey" >Question_id</label>
+            <div class="col-sm-10">   
             
                 <input type='text'  id='year' name='year' class="form-control" placeholder="Question_id" required [(ngModel)]='Question.Question_id' #idcontrol='ngModel'/>
             </div>
@@ -18,15 +18,12 @@
             
         </div>
 
-        <div class='form-group' [class.has.error]="idcontrol.touched && idcontrol.invalid">
-            <label  class="control-label col-sm-2"for ='year' >CourseId</label>
-            <div class="col-sm-10">   
-            <input type='text' id='year' name='year' required [(ngModel)]='Question.Course_id' #idcontrol='ngModel'/>
-            <span class='help-block alert-danger' *ngIf='idcontrol.touched && idcontrol.invalid'>
-                CourseId cant be blank
-            </span>
-            </div>
-        </div>
+        <div class="form-group">
+            <label for="Course_id">Select Course</label>
+            <select id="Course_id" name="Course_id" [(ngModel)] = "Courseid">
+              <option *ngFor="let course of courses" value={{course.Course_id}}>{{course.Course_name}}</option>
+             </select>
+          </div>
 
         <div class='form-group' [class.has.error]="namecontrol.touched && namecontrol.invalid">
             <label  class="control-label col-sm-2"for ='year' >QuestionNo</label>
