--- a/src/app/admin/adminpage/adminpage.component.html
+++ b/src/app/admin/adminpage/adminpage.component.html
@@ -4,13 +4,13 @@
 <br>
 <button><a routerLink="/AdminPage"routerLinkActive="active">View Reports</a></button> -->
 
-<body>
+<!-- <body>
     <div class="id">
         <br><br><br><br>
         <label>Welcome Admin!</label>
         <br><br><br>
 
-        <!-- <img class="img-responsive login-img" src='assets/home.jpg' style="margin-top: 10%;width: 1000%;"> -->
+        <img class="img-responsive login-img" src='assets/home.jpg' style="margin-top: 10%;width: 1000%;"> 
     
     <button type="button" class="btn btn-dark btn-lg" style="font-size: 1em;"><a routerLink="/display"routerLinkActive="active">View Questions</a></button>
     </div>
@@ -21,4 +21,36 @@
     <br><br>
     <br><br> <br><br><br><br><br>
 
+</body> -->
+
+<body>
+    <div id="login">
+        
+        
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form id="login-form" class="form" action="" method="post" #adminform="ngForm" novalidate
+                            class="container text-align: center" >
+                            <h3 class="text-center text-dark">Welcome Admin!</h3>
+                            <br>
+                            <br>
+                            
+                            
+                            <div class="form-group">
+                                
+                                <button type="button" class="btn btn-dark btn-lg btn-block" style="font-size: 2em;"><a style="color: white;" routerLink="/display"routerLinkActive="active">View Questions</a></button>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <button type="button" class="btn btn-dark btn-lg btn-block" style="font-size: 2em;"><a style="color: white;" routerLink="/display"routerLinkActive="active">View Reports</a></button>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
