--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -47,7 +47,7 @@
                 <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
                 <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
 
-                <a href="#userlogin" class="w3-bar-item w3-button"><i class="fa fa-th"></i> USERLOGIN</a>
+                <a routerLink="/UserLogin" routerLinkActive="active" class="w3-bar-item w3-button"><i class="fa fa-th"></i> USERLOGIN</a>
                 <a href="#adminlogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active" ><i class="fa fa-th"></i> ADMINLOGIN</a>
 
                 <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
