--- a/src/app/user/userlogin/userlogin.component.html
+++ b/src/app/user/userlogin/userlogin.component.html
@@ -1,30 +1,33 @@
 <body>
     <div id="login">
-        
-        
+
+
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post" #adminform="ngForm" novalidate
+                        <form id="login-form" class="form" action="" method="post" #userform="ngForm" novalidate
                             class="container text-align: center" (ngSubmit)=OnSubmit();>
-                            <h3 class="text-center text-dark">AdminLogin</h3>
+                            <h3 class="text-center text-dark">UserLogin</h3>
                             <div class="form-group">
                                 <label for="username" class="text-dark">Email:</label><br>
                                 <input type="text" name="username" id="username" class="form-control" id="EmailId"
-                                    #EmailId="ngModel" [(ngModel)]=credentials.Email_id required>
+                                    #EmailId="ngModel" [(ngModel)]=cred.Email required>
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-dark">Password:</label><br>
                                 <input type="text" name="password" id="password" class="form-control" id="password"
-                                    #password="ngModel" [(ngModel)]=credentials.Password required>
+                                    #password="ngModel" [(ngModel)]=cred.Password required>
 
                             </div>
                             <div class="form-group">
                                 <label for="remember-me" class="text-dark"><span>Remember me</span> <span><input
                                             id="remember-me" name="remember-me" type="checkbox"></span></label><br>
-                                <input type="submit" name="submit" class="btn btn-dark btn-lg btn-block"  value="submit">
+                                <input type="submit" name="submit" class="btn btn-dark btn-md" value="submit">
+                                <span class = "psw"><a href="/registeruser">New Registration?</a></span> 
+
                             </div>
+                           
 
                         </form>
                     </div>
