--- a/src/app/admin/addquestion/addquestion.component.css
+++ b/src/app/admin/addquestion/addquestion.component.css
@@ -1,5 +1,5 @@
 body {
-    background: url('src\assets\signup-bg.jpg') fixed;
+    background: url('src\assets\studyon_header_20161.jpg') fixed;
    background-size: cover;
    height:100%;
 }
