--- a/src/app/admin/searchreports/searchreports.component.html
+++ b/src/app/admin/searchreports/searchreports.component.html
@@ -66,7 +66,7 @@
                 </div>
                 <br>
                 
-                <button type="submit" class="btn btn-primary btn-lg btn-block"  >Search</button>
+                <button type="submit" class="btn btn-dark btn-lg btn-block"  >Search</button>
         
         
                             
