--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -37,20 +37,26 @@
 </style>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNav" style="font-size: 20px; ">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a style="color: whitesmoke;" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            
-            <li class="nav-item active">
-                <a  style="color: whitesmoke;" class="nav-link" href="contact">Contact us<span class="sr-only">(current)</span></a>
-            </li>
-            
-          </ul>
+    <div class="w3-top">
+        <div class="w3-bar w3-white w3-card" id="myNavbar">
+            <a href="#home" class="w3-bar-item w3-button w3-wide"><strong>Welcome to the TECHNO WRITE</strong></a>
+            <!-- Right-sided navbar links -->
+            <div class="w3-right w3-hide-small">
+                
+                
+                <a routerLink="/UserLogin" routerLinkActive="active" class="w3-bar-item w3-button"><i class="fa fa-th"></i> USERLOGIN</a>
+                <a href="#adminlogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active" ><i class="fa fa-th"></i> ADMINLOGIN</a>
+
+                <a href="#contact" class="w3-bar-item w3-button" routerLink="/contact" routerLinkActive="active"><i class="fa fa-envelope" ></i> CONTACT</a>
+            </div>
+            <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
+                onclick="w3_open()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
-      </nav>
+    </div>
     <br>
     <h2 class="w3-center"><b>About Us</b></h2>
         <div class="w3-container w3-light-grey" style="padding:128px 16px">
