--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -36,20 +36,26 @@
     }
 </style>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-        <div class="collapse navbar-collapse" id="navbarNav" style="font-size: 20px; ">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a style="color: whitesmoke;" class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <li class="nav-item active">
-                <a style="color: whitesmoke;"class="nav-link" href="about">About<span class="sr-only">(current)</span></a>
-            </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            
-            
-          </ul>
+    <div class="w3-top">
+        <div class="w3-bar w3-white w3-card" id="myNavbar">
+            <a href="#home" class="w3-bar-item w3-button w3-wide"><strong>Welcome to the TECHNO WRITE</strong></a>
+            <!-- Right-sided navbar links -->
+            <div class="w3-right w3-hide-small">
+                <a href="#about" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">ABOUT</a>
+                
+                <a routerLink="/UserLogin" routerLinkActive="active" class="w3-bar-item w3-button"><i class="fa fa-th"></i> USERLOGIN</a>
+                <a href="#adminlogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active" ><i class="fa fa-th"></i> ADMINLOGIN</a>
+
+                
+            </div>
+            <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
+                onclick="w3_open()">
+                <i class="fa fa-bars"></i>
+            </a>
         </div>
-      </nav>
+    </div>
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
     <h3 class="w3-center">CONTACT</h3>
     <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
