--- a/src/app/report-card/report-card.component.html
+++ b/src/app/report-card/report-card.component.html
@@ -1,29 +1,53 @@
+<body>
+    <div class="w3-top" style="font-size: 15px; ">
+        <div class="w3-bar w3-white w3-card" id="myNavbar" style="padding: 10px;">
+            <a href="#home" class="w3-bar-item w3-button w3-wide"><strong>Welcome to the TECHNO WRITE</strong></a>
+            <!-- Right-sided navbar links -->
+            <div class="w3-right w3-hide-small">
+                <a href="#" class="w3-bar-item w3-button" routerLink="/homepage" routerLinkActive="active">HOME</a>
+                <a href="#about" class="w3-bar-item w3-button" routerLink="/about" routerLinkActive="active">ABOUT</a>                
+                <a href="#contact" class="w3-bar-item w3-button" routerLink="/contact" routerLinkActive="active"><i class="fa fa-envelope" ></i> CONTACT</a>
+                <a href="#AdminLogin" class="w3-bar-item w3-button" routerLink="/AdminLogin" routerLinkActive="active">LOGOUT</a>  
+            </div>
+            <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
-<div class="container">
-    <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-               
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium"
+                onclick="w3_open()">
+                <i class="fa fa-bars"></i>
+            </a>
+        </div>
+    </div>
+    <br>
+      <br>
+      <br>
+      <br>
+<div>
+    <br><br><br>
+    <h3 style="color: whitesmoke;">TEST HISTORY</h3>
+    <table>
+            
+          
+        <tr>
+            <th>Course Name</th>
+            <th>Level1 Marks</th>
+            <th>Level2 Marks</th>
+            <th>Level3 Marks</th>
+            <th>Test Date</th>            
+        </tr>
+        
+        
+    
+        <tr *ngFor="let r of reports">
+            <td>{{r.Course.Course_name}}</td>
+            <td>{{r.Level_1_Marks}}</td>
+            <td>{{r.Level_2_Marks}}</td>
+            <td>{{r.Level_3_Marks}}</td>
+            <td>{{r.Test_Date | date:'shortDate'}}</td>
 
-
-                <th>Course Name</th>
-                <th>Level1 Marks</th>
-                <th>Level2 Marks</th>
-                <th>Level3 Marks</th>
-                <th>Test Date</th>
-
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let report of reports">
-                <td>{{report.Course.Course_name}}</td>
-                <td>{{report.Level_1_Marks}}</td>
-                <td>{{report.Level_2_Marks}}</td>
-                <td>{{report.Level_3_Marks}}</td>
-                <td>{{report.Test_Date | date:'shortDate'}}</td>
-
-
-            </tr>
-        </tbody>
+        
+        </tr>
+        
+        
     </table>
 </div>
+</body>
